multiplicate image with scalar number added. Need validation

--- a/resources/view/images_operations_scene_view.fxml
+++ b/resources/view/images_operations_scene_view.fxml
@@ -29,6 +29,7 @@
                            <items>
                               <MenuItem mnemonicParsing="false" onAction="#makeImagesSum" text="Sum" />
                               <MenuItem mnemonicParsing="false" onAction="#makeImagesMultiplication" text="Multiplication" />
+                              <MenuItem mnemonicParsing="false" onAction="#makeImageMultiplicationWithScalarNumber" text="Multiplication (with scalar number)" />
                            </items>
                         </Menu>
                    </menus>
