transformation fixed. Substraction added

--- a/resources/view/images_operations_scene_view.fxml
+++ b/resources/view/images_operations_scene_view.fxml
@@ -28,6 +28,7 @@
                         <Menu mnemonicParsing="false" text="Operations">
                            <items>
                               <MenuItem mnemonicParsing="false" onAction="#makeImagesSum" text="Sum" />
+                              <MenuItem mnemonicParsing="false" onAction="#makeImagesSubstraction" text="Substract" />
                               <MenuItem mnemonicParsing="false" onAction="#makeImagesMultiplication" text="Multiplication" />
                               <MenuItem mnemonicParsing="false" onAction="#makeImageMultiplicationWithScalarNumber" text="Multiplication (with scalar number)" />
                            </items>
