--- a/resources/view/save_image_scene_view.fxml
+++ b/resources/view/save_image_scene_view.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane prefHeight="186.0" prefWidth="445.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.SaveImageController">
-   <children>
-      <ListView fx:id="formatList" layoutX="32.0" layoutY="56.0" prefHeight="114.0" prefWidth="85.0" />
-      <Label layoutX="32.0" layoutY="30.0" prefHeight="17.0" prefWidth="85.0" text="Output format" />
-      <Label layoutX="187.0" layoutY="30.0" prefHeight="17.0" prefWidth="93.0" text="Output filename" />
-      <TextField fx:id="outputName" layoutX="187.0" layoutY="56.0" prefHeight="25.0" prefWidth="137.0" />
-      <Button fx:id="saveButton" layoutX="368.0" layoutY="56.0" mnemonicParsing="false" onAction="#onSaveImage" text="Save" />
-   </children>
+<AnchorPane prefHeight="186.0" prefWidth="445.0" xmlns="http://javafx.com/javafx/8.0.121"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.SaveImageController">
+    <ListView fx:id="formatList" layoutX="32.0" layoutY="56.0" prefHeight="114.0" prefWidth="85.0"/>
+    <Label layoutX="32.0" layoutY="30.0" prefHeight="17.0" prefWidth="85.0" text="Output format"/>
+    <Label layoutX="187.0" layoutY="30.0" prefHeight="17.0" prefWidth="93.0" text="Output filename"/>
+    <TextField fx:id="outputName" layoutX="187.0" layoutY="56.0" prefHeight="25.0" prefWidth="137.0"/>
+    <Button layoutX="368.0" layoutY="56.0" mnemonicParsing="false" onAction="#onSaveImage" text="Save"/>
 </AnchorPane>
