--- a/resources/view/image_histogram_scene_view.fxml
+++ b/resources/view/image_histogram_scene_view.fxml
@@ -5,29 +5,21 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="presentation.controller.ImageHistogramSceneController">
+<BorderPane prefHeight="339.0" prefWidth="577.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.ImageHistogramSceneController">
     <center>
-        <AnchorPane prefHeight="321.0" prefWidth="959.0">
-            <Pane layoutX="59.0" layoutY="19.0" prefHeight="316.0" prefWidth="875.0">
-                <VBox>
-                    <BarChart fx:id="barChart" layoutY="8.0" prefHeight="313.0" prefWidth="858.0"
-                              barGap="0.0"
-                              horizontalGridLinesVisible="false"
-                              verticalGridLinesVisible="false"
-                              legendVisible="false">
-                        <xAxis>
-                            <CategoryAxis label="GrayScale" endMargin="0.0" side="BOTTOM" startMargin="0.0"/>
-                        </xAxis>
-                        <yAxis>
-                            <NumberAxis label="Pixel Occurrency" side="LEFT" upperBound="0.0"/>
-                        </yAxis>
-                    </BarChart>
-                </VBox>
-            </Pane>
+        <AnchorPane prefHeight="339.0" prefWidth="590.0">
+             <VBox layoutX="19.0" layoutY="23.0" prefHeight="293.0" prefWidth="539.0">
+                 <BarChart fx:id="barChart" barGap="0.0" horizontalGridLinesVisible="false" layoutY="8.0" legendVisible="false" prefHeight="293.0" prefWidth="481.0" verticalGridLinesVisible="false">
+                     <xAxis>
+                         <CategoryAxis endMargin="0.0" label="GrayScale" side="BOTTOM" startMargin="0.0" />
+                     </xAxis>
+                     <yAxis>
+                         <NumberAxis label="Pixel Occurrency" side="LEFT" upperBound="0.0" />
+                     </yAxis>
+                 </BarChart>
+             </VBox>
         </AnchorPane>
     </center>
 </BorderPane>
