--- a/resources/view/filter_scene_view.fxml
+++ b/resources/view/filter_scene_view.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="141.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.MediaFilterSceneController">
-    <Label layoutX="36.0" layoutY="21.0" prefHeight="17.0" prefWidth="258.0" text="Enter size mask | Must be an odd integer" />
+<AnchorPane prefHeight="141.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.FilterSceneController">
+    <Label fx:id="labelSize" layoutX="36.0" layoutY="21.0" prefHeight="17.0" prefWidth="258.0" />
     <TextField fx:id="sizeTextField" layoutX="131.0" layoutY="57.0" prefHeight="25.0" prefWidth="67.0" />
     <Button layoutX="127.0" layoutY="100.0" mnemonicParsing="false" onAction="#apply" text="Generate" />
 </AnchorPane>
