--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -163,6 +163,7 @@
         <Menu mnemonicParsing="false" text="Filter">
             <MenuItem mnemonicParsing="false" onAction="#onApplyMeanFilter" text="Mean" />
             <MenuItem mnemonicParsing="false" onAction="#onApplyMedianFilter" text="Median" />
+            <MenuItem mnemonicParsing="false" onAction="#onApplyWeightedMedianFilter" text="Weighted Median" />
         </Menu>
     </MenuBar>
 </AnchorPane>
