--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -38,6 +39,9 @@
                 <center>
                     <ImageView fx:id="modifiedImageView" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
                 </center>
+            <bottom>
+               <Button fx:id="applyChangesButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#applyChanges" text="Apply Changes" visible="false" BorderPane.alignment="BOTTOM_CENTER" />
+            </bottom>
             </BorderPane>
             <VBox alignment="CENTER" prefHeight="400.0" prefWidth="215.0" GridPane.columnIndex="2">
                 <Pane prefHeight="153.0" prefWidth="125.0">
@@ -96,14 +100,14 @@
                 <MenuItem mnemonicParsing="false" onAction="#gammaPowerFunction" text="Gamma Power Function" />
                 <MenuItem mnemonicParsing="false" onAction="#calculateImagesOperations" text="Image Operations" />
                 <Menu mnemonicParsing="false" text="Histogram">
-                    <MenuItem mnemonicParsing="false" onAction="#createImageHistogram" text="Create"/>
+                    <MenuItem mnemonicParsing="false" onAction="#createImageHistogram" text="Create" />
                     <Menu mnemonicParsing="false" text="Equalize Image">
-                        <MenuItem mnemonicParsing="false" onAction="#createEqualizedImage" text="Image"/>
-                        <MenuItem mnemonicParsing="false" onAction="#createEqualizedImageByHistogram" text="Image with Histogram"/>
+                        <MenuItem mnemonicParsing="false" onAction="#createEqualizedImage" text="Image" />
+                        <MenuItem mnemonicParsing="false" onAction="#createEqualizedImageByHistogram" text="Image with Histogram" />
                     </Menu>
                     <Menu mnemonicParsing="false" text="Equalize Image Twice">
-                        <MenuItem mnemonicParsing="false" onAction="#createImageEqualizedTwice" text="Image"/>
-                        <MenuItem mnemonicParsing="false" onAction="#createImageEqualizedTwiceByHistogram" text="Image with Histogram"/>
+                        <MenuItem mnemonicParsing="false" onAction="#createImageEqualizedTwice" text="Image" />
+                        <MenuItem mnemonicParsing="false" onAction="#createImageEqualizedTwiceByHistogram" text="Image with Histogram" />
                     </Menu>
                 </Menu>
             </Menu>
