Apply Edge Detector: Sobel. Refactor: ApplyEdgeDetectorByGradientAction now execute with XDerivateMask and YDerivateMask

--- a/resources/view/filter_scene_view.fxml
+++ b/resources/view/filter_scene_view.fxml
@@ -7,6 +7,6 @@
 
 <AnchorPane prefHeight="141.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.controller.FilterSceneController">
     <Label fx:id="label" layoutX="36.0" layoutY="21.0" prefHeight="17.0" prefWidth="258.0" />
-    <TextField fx:id="textField" layoutX="131.0" layoutY="57.0" prefHeight="25.0" prefWidth="67.0" />
+    <TextField fx:id="textField" layoutX="131.0" layoutY="57.0" prefHeight="25.0" prefWidth="67.0" alignment="CENTER"/>
     <Button layoutX="127.0" layoutY="100.0" mnemonicParsing="false" onAction="#apply" text="Generate" />
 </AnchorPane>
