Apply Derivative Directional Operator Standard

--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -168,6 +168,7 @@
             <MenuItem mnemonicParsing="false" onAction="#onApplyEdgeEnhancement" text="Edge enhancement" />
             <MenuItem mnemonicParsing="false" onAction="#onApplyPrewittEdgeDetector" text="Prewitt" />
             <MenuItem mnemonicParsing="false" onAction="#onApplySobelEdgeDetector" text="Sobel" />
+            <MenuItem mnemonicParsing="false" onAction="#onApplyDerivateDirectionalOperatorStandard" text="Derivate Directional Operator Standard" />
         </Menu>
     </MenuBar>
 </AnchorPane>
