Subo detector de marr hildreth

--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -164,7 +164,7 @@
            <items>
              <MenuItem mnemonicParsing="false" onAction="#onApplyLaplacianEdgeDetector" text="Standard Laplacian" />
                <MenuItem mnemonicParsing="false" onAction="#onApplyLaplacianEdgeDetectorWithSlopeEvaluation" text="Laplacian with slope evaluation" />
-               <MenuItem mnemonicParsing="false" text="Marr-Hildreth (Gaussian-Laplacian)" />
+               <MenuItem mnemonicParsing="false" onAction="#onApplyMarrHildrethEdgeDetector" text="Marr-Hildreth (Gaussian-Laplacian)" />
            </items>
          </Menu>
             <Menu mnemonicParsing="false" text="Directional Derivative Operators">
