--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -69,8 +69,8 @@
                     </Pane>
                 </Pane>
                 <Pane prefHeight="371.0" prefWidth="152.0">
-               <Button fx:id="applyChangesButton" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="21.0" layoutY="265.0" mnemonicParsing="false" onAction="#applyChanges" text="Apply Changes" visible="false" />
-               <Button fx:id="resetModifiedImageButton" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="21.0" layoutY="300.0" mnemonicParsing="false" onAction="#resetModifiedImage" text="Reset" />
+                    <Button fx:id="applyChangesButton" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="21.0" layoutY="265.0" mnemonicParsing="false" onAction="#applyChanges" text="Apply Changes" visible="false" />
+                    <Button fx:id="resetModifiedImageButton" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="21.0" layoutY="300.0" mnemonicParsing="false" onAction="#resetModifiedImage" text="Reset" />
                     <Pane layoutX="14.0" layoutY="14.0" prefHeight="225.0" prefWidth="112.0">
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="35.0" layoutY="6.0" text="Value" textAlignment="CENTER" />
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="52.0" layoutY="34.0" text="R" textAlignment="CENTER" />
@@ -80,7 +80,7 @@
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="51.0" layoutY="161.0" text="B" textAlignment="CENTER" />
                         <TextField fx:id="valueB" editable="false" layoutX="22.0" layoutY="184.0" prefHeight="27.0" prefWidth="67.0" />
                     </Pane>
-               <Button fx:id="undoChangesButton" layoutX="43.0" layoutY="315.0" mnemonicParsing="false" onAction="#onUndoChanges" text="Undo changes" visible="false" />
+                    <Button fx:id="undoChangesButton" layoutX="43.0" layoutY="315.0" mnemonicParsing="false" onAction="#onUndoChanges" text="Undo changes" visible="false" />
                 </Pane>
             </VBox>
         </GridPane>
@@ -129,7 +129,7 @@
                     <MenuItem mnemonicParsing="false" onAction="#generateExponentialNoiseSyntheticImage" text="Exponential" />
                     <MenuItem mnemonicParsing="false" onAction="#generateRayleighNoiseSyntheticImage" text="Rayleigh" />
                     <MenuItem mnemonicParsing="false" onAction="#generateGaussianNoiseSyntheticImage" text="Gaussian" />
-               </Menu>
+                </Menu>
             </Menu>
             <Menu mnemonicParsing="false" text="Random Numbers">
                 <MenuItem mnemonicParsing="false" onAction="#generateExponentialRandomNumber" text="Exponential" />
@@ -181,8 +181,9 @@
          </Menu>
          <Menu mnemonicParsing="false" text="Unconventional Detectors">
            <items>
-             <MenuItem mnemonicParsing="false" onAction="#onApplyCannyEdgeDetector" text="Canny" />
-           </items>
+			   <MenuItem mnemonicParsing="false" onAction="#onApplyCannyEdgeDetector" text="Canny" />
+			   <MenuItem mnemonicParsing="false" onAction="#applySusanEdgeDetector" text="Susan" />
+		   </items>
          </Menu>
 		</Menu>
          <Menu mnemonicParsing="false" text="Threshold">
