--- a/resources/view/main_scene_view.fxml
+++ b/resources/view/main_scene_view.fxml
@@ -158,32 +158,27 @@
             <MenuItem mnemonicParsing="false" onAction="#onApplyGaussianFilter" text="Gaussian" />
         </Menu>
         <Menu mnemonicParsing="false" text="Edges">
-         <Menu mnemonicParsing="false" text="Conventional Detectors">
-            <items>
-                  <Menu mnemonicParsing="false" text="Directional Derivative Operators">
-                      <MenuItem mnemonicParsing="false" onAction="#onApplyDirectionalDerivativeOperatorStandardMask" text="Standard Mask" />
-                      <MenuItem mnemonicParsing="false" onAction="#onApplyDirectionalDerivativeOperatorKirshMask" text="Kirsh Mask" />
-                      <MenuItem mnemonicParsing="false" onAction="#onApplyDirectionalDerivativeOperatorPrewittMask" text="Prewitt Mask" />
-                      <MenuItem mnemonicParsing="false" onAction="#onApplyDirectionalDerivativeOperatorSobelMask" text="Sobel Mask" />
-                  </Menu>
-               <Menu mnemonicParsing="false" text="Laplacian">
-                 <items>
-                   <MenuItem mnemonicParsing="false" onAction="#onApplyLaplacianEdgeDetector" text="Standard Laplacian" />
-                     <MenuItem mnemonicParsing="false" onAction="#onApplyLaplacianEdgeDetectorWithSlopeEvaluation" text="Laplacian with slope evaluation" />
-                     <MenuItem mnemonicParsing="false" onAction="#onApplyMarrHildrethEdgeDetector" text="Marr-Hildreth (Gaussian-Laplacian)" />
-                 </items>
-               </Menu>
-                  <MenuItem mnemonicParsing="false" onAction="#onApplyEdgeEnhancement" text="Edge enhancement" />
-                  <MenuItem mnemonicParsing="false" onAction="#onApplyPrewittEdgeDetector" text="Prewitt" />
-                  <MenuItem mnemonicParsing="false" onAction="#onApplySobelEdgeDetector" text="Sobel" />
-      			<MenuItem mnemonicParsing="false" onAction="#onApplyDiffusion" text="Diffusion" />
-            </items>
-         </Menu>
-         <Menu mnemonicParsing="false" text="Unconventional Detectors">
-           <items>
-             <MenuItem mnemonicParsing="false" onAction="#onApplyCannyEdgeDetector" text="Canny" />
-           </items>
-         </Menu>
+			<Menu mnemonicParsing="false" text="Conventional Detectors">
+				<Menu mnemonicParsing="false" text="Directional Derivative Operators">
+					<MenuItem mnemonicParsing="false" onAction="#onApplyDirectionalDerivativeOperatorStandardMask" text="Standard Mask"/>
+					<MenuItem mnemonicParsing="false" onAction="#onApplyDirectionalDerivativeOperatorKirshMask" text="Kirsh Mask"/>
+					<MenuItem mnemonicParsing="false" onAction="#onApplyDirectionalDerivativeOperatorPrewittMask" text="Prewitt Mask"/>
+					<MenuItem mnemonicParsing="false" onAction="#onApplyDirectionalDerivativeOperatorSobelMask" text="Sobel Mask"/>
+				</Menu>
+				<Menu mnemonicParsing="false" text="Laplacian">
+					<MenuItem mnemonicParsing="false" onAction="#onApplyLaplacianEdgeDetector" text="Standard Laplacian"/>
+					<MenuItem mnemonicParsing="false" onAction="#onApplyLaplacianEdgeDetectorWithSlopeEvaluation" text="Laplacian with slope evaluation"/>
+					<MenuItem mnemonicParsing="false" onAction="#onApplyMarrHildrethEdgeDetector" text="Marr-Hildreth (Gaussian-Laplacian)"/>
+				</Menu>
+				<MenuItem mnemonicParsing="false" onAction="#onApplyEdgeEnhancement" text="Edge enhancement"/>
+				<MenuItem mnemonicParsing="false" onAction="#onApplyPrewittEdgeDetector" text="Prewitt"/>
+				<MenuItem mnemonicParsing="false" onAction="#onApplySobelEdgeDetector" text="Sobel"/>
+				<MenuItem mnemonicParsing="false" onAction="#onApplyDiffusion" text="Diffusion"/>
+			</Menu>
+			<Menu mnemonicParsing="false" text="Unconventional Detectors">
+				<MenuItem mnemonicParsing="false" onAction="#onApplyCannyEdgeDetector" text="Canny"/>
+			</Menu>
+			<MenuItem mnemonicParsing="false" onAction="#onApplyActiveContour" text="Active Contour"/>
 		</Menu>
          <Menu mnemonicParsing="false" text="Threshold">
              <MenuItem mnemonicParsing="false" onAction="#threshold" text="Threshold" />
