--- a/resources/view/active_contour_scene_view.fxml
+++ b/resources/view/active_contour_scene_view.fxml
@@ -8,18 +8,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="449.0" prefWidth="526.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
 			fx:controller="presentation.controller.ActiveContourSceneController">
 	<BorderPane prefHeight="447.0" prefWidth="526.0">
 		<right>
 			<VBox alignment="CENTER" prefHeight="200.0" prefWidth="153.0" BorderPane.alignment="CENTER">
+				<Label text="Insert steps"/>
 				<TextField fx:id="steps" prefHeight="27.0" prefWidth="50.0" promptText="Steps"/>
-				<Button fx:id="getOutsideButton" alignment="CENTER" mnemonicParsing="false" onAction="#onGetOutside" text="Get outside">
+				<Button fx:id="getBackgroundButton" alignment="CENTER" mnemonicParsing="false" onAction="#onGetBackground" text="Get background">
 					<VBox.margin>
 						<Insets bottom="10.0" right="10.0" top="10.0"/>
 					</VBox.margin>
 				</Button>
-				<Button fx:id="getInsideButton" mnemonicParsing="false" onAction="#onGetInside" text="Get inside">
+				<Button fx:id="getObjectButton" mnemonicParsing="false" onAction="#onGetObject" text="Get object">
 					<VBox.margin>
 						<Insets bottom="10.0" right="10.0" top="10.0"/>
 					</VBox.margin>
